# simple-rest

./: Cargo.toml  Dockerfile  README.md  cert.pem  key.pem
resources/: root.json
resources/api/json/currency/: currency.json
resources/v1/get/permissions/: response.json
src/: cli.rs  main.rs
